tests/ill_typed/struct1.mist
lazy Foo = Struct(a: Int, b: Int)

def f1(foo: Foo): String = foo.b